style.css
/* ... */
/* 800 - Extra Bold */
@font-face {
    font-family: "Poppins";
    font-style: normal;
    font-display: swap;
    font-weight: 800;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/poppins@latest/latin-800-normal.woff2)
        format("woff2");
}
/* 900 - Black */
@font-face {
    font-family: "Poppins";
    font-style: normal;
    font-display: swap;
    font-weight: 900;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/poppins@latest/latin-900-normal.woff2)
        format("woff2");
}

html,
body {
    min-height: 100vh;
}

body {
    display: grid;
    place-items: center;
    background-color: var(--black);
    position: relative;
    z-index: 0;
}

body,
button,
input {
    font-family: "Poppins", Arial, Helvetica, sans-serif;
    letter-spacing: 0.4px;
}

/* !MOBILE STYLES */
main {
    display: flex;
    flex-direction: column;
    justify-content: start;
    position: relative;
    width: clamp(300px, 90vw, 1000px);
    height: max(600px, 80vh);
    padding: 100px 16px 20px;
    background-color: var(--dark-grey);
    border-radius: 20px;
    color: white;
}

#history-btn {
    background-color: transparent;
    border: none;
    position: absolute;
    right: 16px;
    top: 24px;
}

h1 {
    font-size: clamp(1.5rem, 1.488vw + 1.202rem, 2.125rem);
    font-weight: var(--semi-bold);
}

:where(#heading-and-form) {
    display: flex;
    flex-direction: column;
    gap: 32px;
    height: 100%;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

#form-inputs {
    display: grid;
    gap: 24px;
}

label {
    font-size: 16px;
    font-weight: var(--medium);
}

#price-label-cont {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#trigger-and-dropdown {
    position: relative;
}

#dropdown-btn,
.dropdown-li {
    background-color: var(--light-grey);
    color: white;
}

#dropdown-btn {
    display: flex;
    align-items: center;
    gap: 12px;
    border: none;
    padding: 8px;
    border-radius: 8px;
    font-weight: var(--medium);
    font-size: 14px;
}

#currency-dropdown {
    display: grid;
    grid-template-rows: 0fr;
    overflow: hidden;
    width: 125px;
    border: none;
    background-color: var(--light-grey);
    border-radius: 12px;
    color: white;
    padding: 0 8px;
    list-style: none;
    position: absolute;
    top: 120%;
    transition: all 0.3s;
}

#dropdown-wrapper {
    min-height: 0;
}

#currency-dropdown.opened {
    grid-template-rows: 1fr;
    padding: 8px;
}

#desktop-arrow {
    display: none;
}

.arrow-icon {
    transition: all 0.3s ease-in-out;
}

#trigger-and-dropdown:has(.opened) .arrow-icon {
    rotate: 180deg;
}

.dropdown-li {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 8px;
    padding: 6px 8px;
    transition: all 0.3s;
}

.dropdown-li:hover,
.selected {
    background-color: var(--lighter-grey);
}

/* Chrome, Safari, Edge */
.input-cont input::-webkit-inner-spin-button,
.input-cont input::-webkit-outer-spin-button {
    -webkit-appearance: none;
}

/* Firefox */
input[type="number"] {
    -moz-appearance: textfield;
}

.input-cont {
    display: flex;
    justify-content: start;
    align-items: center;
    border: 2px solid var(--main-orange);
    border-radius: 10px;
    height: 56px;
    margin-top: 16px;
    padding-left: 16px;
    font-size: 18px;
}

.input-cont input {
    border: none;
    background-color: transparent;
    height: 100%;
    color: white;
    font-size: 14px;
}

.input-cont :is(input, .currency-sign) {
    font-size: 16px;
}

.input-cont input:focus {
    outline: none;
}

#price-input {
    margin-left: 4px;
    width: 100%;
}

#discount-input-cont {
    padding: 0 16px;
}

#discount-input {
    field-sizing: content;
    /* width: 20px; */
    margin-right: 4px;
}

#btns-cont {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: fit-content;
    gap: 12px;
}

main button,
#clear-history-btn {
    padding: 12px 0;
    font-size: 16px;
    font-weight: var(--medium);
    color: white;
    border-radius: 12px;
    border: none;
    font-size: var(--font-size-20);
}

#calculate-btn,
#clear-history-btn {
    background-color: var(--main-orange);
}

#back-btn,
#clear-input-btn {
    color: var(--main-orange);
    border: 3px solid;
    background-color: transparent;
}

.output-cont.mobile {
    height: 100%;
}

/* on mobile, this doesn't exist */
.no-calculations-cont {
    display: none;
}

#number-conts {
    display: grid;
    gap: 28px;
}

.number-cont {
    border-radius: 12px;
    padding: 16px;
}

.number-cont {
    background-color: var(--light-grey);
}

.number-cont h3 {
    font-size: var(--font-size-16);
    font-weight: var(--medium);
    color: var(--main-orange);
}

.number-cont p {
    display: flex;
    gap: 2px;
    font-size: var(--font-size-36);
    font-weight: var(--semi-bold);
}

#back-btn {
    width: 100%;
    margin-top: 60px;
}

dialog {
    position: fixed;
    left: 50%;
    top: 50%;
    z-index: 2;
    background-color: var(--dark-grey);
    color: white;
    width: min(900px, 85vw);
    height: 500px;
    transform: translate(-50%, -50%);
    border: none;
    border-radius: 20px;
}

/* overlay */
body:has(dialog:open)::before {
    content: "";
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.887);
    top: 0;
    left: 0;
    z-index: 1;
}

#close-modal-btn {
    top: 12px;
    right: 10px;
    position: absolute;
    background-color: transparent;
    border: none;
}

#close-modal-btn > .desktop {
    display: none;
}

#history-wrapper {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#no-history-cont img {
    display: block;
    margin: auto;
    width: min(300px, 90%);
}

#no-history-cont h2 {
    margin-top: 12px;
    text-align: center;
}

#history-cont {
    display: grid;
    gap: 24px;
}
/* ... */

